--- a/public/services/src/app/views/personal/personalHeader/personal-header.less
+++ b/public/services/src/app/views/personal/personalHeader/personal-header.less
@@ -40,7 +40,7 @@
         .honor {
             .honor-num {
                 float: left;
-                width: 25%;
+                width: 22%;
                 span {
                     display: block;
                     width: 100%;
@@ -55,6 +55,10 @@
                     color: #8E8E8E;
                     line-height: 1rem;
                 }
+            }
+            .follow, .get-like {
+                padding-left: 8%;
+                width: 22%;
             }
         }
     }
