--- a/public/services/src/app/views/personal/honor/fans.less
+++ b/public/services/src/app/views/personal/honor/fans.less
@@ -1,8 +1,11 @@
+.followsList {
+	overflow: hidden;
+}
 .honor-fans {
 	position: relative;
 	width: 92%;
 	margin: 0 auto;
-	padding: 1.07rem 0;
+	padding: 3% 0;
 	border-bottom: 1px solid #eaeaea;
 	.fans-avatar {
 		overflow: hidden;
