--- a/public/services/src/app/views/personal/honor/fans.html
+++ b/public/services/src/app/views/personal/honor/fans.html
@@ -17,6 +17,6 @@
         var honorType = $('body').attr('honor-type');
         if( honorType == 'fans' && dataUid != uid) {
     %>
-	<div class="follow <% is_follow?'mutual':'following' %>" id="followHe" isFollow="<%= is_follow %>" data-uid="<%= uid %>"></div>
+	<div class="follow <%= is_follow?'mutual':'following' %>" id="followHe" isFollow="<%= is_follow %>" data-uid="<%= uid %>"></div>
 	<% } %>
 </div>
