--- a/public/services/src/app/views/hot/hotChannel/hotChannel.html
+++ b/public/services/src/app/views/hot/hotChannel/hotChannel.html
@@ -11,7 +11,7 @@
 		</a>
 		<% }) %>		
 	</div>
-	<a href="#channel/index" class="channel-more">更多频道</a>
+	<a href="#channel/index" class="channel-more">全部频道</a>
 	<div class="hot-works">
 		<i class="works-icon"></i>
 		<span>热门作品</span>
