--- a/public/services/src/app/views/detail/detailWorks/ask-detail.less
+++ b/public/services/src/app/views/detail/detailWorks/ask-detail.less
@@ -84,7 +84,7 @@
 	.comment-avatar {
 		float: left;
 		width: 9%;
-		height: 9%;
+		height: 2.27rem;
 		overflow: hidden;
 		border-radius: 50%;
 		margin-right: 2%;
