--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -1,3 +1,16 @@
+.we-see {
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    display: block;
+    width: 100%;
+    height: 3.68rem;
+    img {
+        display: block;
+        width: 100%;
+        height: 3.68rem;
+    }
+}
 .menuMy-list-hide {
     position: absolute;
     z-index: 1;
