--- a/public/services/src/app/views/channel/channelDetail/channelDetail.html
+++ b/public/services/src/app/views/channel/channelDetail/channelDetail.html
@@ -2,7 +2,7 @@
 	<div class="channel-go clearfix">
 		<div class="vertical"></div>
 		<h2><%= display_name %></h2>
-		<a href="#channel/index" class="channel-more">更多频道</a>
+		<a href="#channel/index" class="channel-more">全部频道</a>
 	</div>
 	<div class="channel-banner">
 		<div class="pic-box"><img src="<%= app_pic %>" alt=""></div>
