--- a/public/services/src/app/views/detail/detailContent/detail-content.less
+++ b/public/services/src/app/views/detail/detailContent/detail-content.less
@@ -135,7 +135,7 @@
 		display: block;
 		width: 94%;
 		padding: 1rem 3% 0.61rem;
-		border-bottom: 1px solid #DDDDDD;
+		/*border-bottom: 1px solid #DDDDDD;*/
 		background-color: #fff;
 		.avatar {
 			float: left;
