--- a/public/services/src/app/views/detail/detailContent/detailContent.html
+++ b/public/services/src/app/views/detail/detailContent/detailContent.html
@@ -1,8 +1,8 @@
 <% if(ask_id != 0) { %>
-<!-- <a href="#channel/detail/<%= category_id %>" class="channel-go clearfix">
+<a href="#channel/detail/<%= category_id %>" class="channel-go clearfix">
 	<div class="vertical"></div>
 	<h2><%= category_name %></h2>
-</a> -->
+</a>
 <% } %>
 
 <div class="post-workShow artWorkShow">
