--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -320,8 +320,9 @@ body, html {
 	}
 }
 #header-section {
-	position: relative !important;
-	z-index: 2;
+	/*border-bottom: 1px solid #f7f7f7;*/
+	/*position: relative !important;*/
+	/*z-index: 2;*/
 }
 #content-section {
 	position: relative;
