--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -437,8 +437,9 @@ html {
   color: #A27322;
 }
 #header-section {
-  position: relative !important;
-  z-index: 2;
+  /*border-bottom: 1px solid #f7f7f7;*/
+  /*position: relative !important;*/
+  /*z-index: 2;*/
 }
 #content-section {
   position: relative;
@@ -1248,6 +1249,242 @@ html {
   width: 100%;
 }
 
+.swiper-wrapper {
+  width: 100%;
+  height: 12.39rem;
+}
+.swiper-wrapper .swiper-slide img {
+  display: block;
+  width: 100%;
+}
+#_banner {
+  overflow: hidden;
+  height: 12.39rem;
+  margin-bottom: 1.2rem;
+}
+
+.swiper-hide {
+  overflow: hidden;
+}
+.hot-channel .channel {
+  /*overflow: hidden;*/
+  height: 3.7rem;
+  background-color: #fff;
+  margin-bottom: 1rem;
+}
+.hot-channel .channel a {
+  float: left;
+  width: 25%;
+}
+.hot-channel .channel a dt {
+  width: 3.7rem;
+  height: 3.7rem;
+  margin: 0 auto 0.36rem;
+}
+.hot-channel .channel a dt img {
+  display: block;
+  width: 100%;
+}
+.hot-channel .channel a dd {
+  text-align: center;
+  font-size: 0.86rem;
+  color: #313040;
+}
+.hot-channel .channel-more {
+  display: block;
+  width: 23%;
+  height: 1.79rem;
+  margin: 0 auto 1rem;
+  border: 1px solid #979797;
+  color: #979797;
+  line-height: 1.79rem;
+  text-align: center;
+  border-radius: 3.57rem;
+}
+.hot-channel .hot-works {
+  line-height: 3.21rem;
+  text-align: center;
+  font-size: 1rem;
+  color: #313040;
+  background-color: #f7f7f7;
+}
+.hot-channel .hot-works .works-icon {
+  display: inline-block;
+  height: 3.21rem;
+  width: 1.11rem;
+  margin-right: 0.5rem;
+  background: url(/images/hot-work.png) 0 center no-repeat;
+  background-size: contain;
+  vertical-align: top;
+}
+.hot-channel .hot-works span {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.workSectionHeader {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.54rem 0 0.54rem 0.36rem;
+  background-color: #fff;
+}
+.workSectionHeader .portrait {
+  float: left;
+  width: 1.43rem;
+  height: 1.43rem;
+  margin-right: 0.29rem;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.workSectionHeader .portrait img {
+  display: block;
+  width: 100%;
+}
+.workSectionHeader .nickname {
+  float: left;
+  line-height: 1.43rem;
+  font-size: 0.9rem;
+  color: #000;
+}
+.hot-pageSection {
+  width: 100%;
+  background-color: #f7f7f7;
+}
+.hot-pageSection .workSection {
+  float: left;
+  width: 100%;
+  border-radius: 0.29rem;
+  box-shadow: 3px 3px 5px 2px #dedede;
+  overflow: hidden;
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workPic {
+  overflow: hidden;
+  position: relative;
+  display: block;
+  width: 100%;
+  /*margin-bottom: 0.54rem;*/
+  max-height: 30rem;
+  font-size: 0;
+}
+.hot-pageSection .workSection .workPic img {
+  width: 100%;
+}
+.hot-pageSection .workSection .workPic .origin {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 4rem;
+  height: 4rem;
+  /*border: 0.21rem solid rgba(0,0,0,0.05);*/
+  border-bottom: 0;
+  border-radius: 0.21rem 0 0 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.hot-pageSection .workSection .workPic .origin .tag {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  padding: 0.2rem;
+  /*width: 1.57rem;*/
+  height: 0.71rem;
+  line-height: 0.71rem;
+  font-size: 0.5rem;
+  text-align: center;
+  border-radius: 0.21rem 0 0 0;
+  background-color: #f9d161;
+  z-index: 1;
+  border-radius: 0.2rem;
+}
+.hot-pageSection .workSection .workPic .origin .pic {
+  width: 100%;
+  height: 4rem;
+  overflow: hidden;
+}
+.hot-pageSection .workSection .workPic .origin .pic img {
+  display: block;
+  width: 100%;
+}
+.hot-pageSection .workSection .workPic .origin .div-line {
+  position: absolute;
+  left: -0.21rem;
+  bottom: -0.18rem;
+  width: 4.42rem;
+  height: 0.18rem;
+  background-color: #fded5e;
+  z-index: 1;
+}
+.hot-pageSection .workSection .workDesc {
+  display: block;
+  overflow: hidden;
+  max-height: 3.13rem;
+  padding-left: 0.68rem;
+  line-height: 1.3rem;
+  font-size: 0.9rem;
+  color: #000;
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workSectionFooter {
+  display: block;
+  background-color: #fff;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper {
+  float: right;
+  padding: 0.5rem 0;
+  line-height: 1rem;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like {
+  float: left;
+  margin-left: 0.93rem;
+  cursor: pointer;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
+  display: block;
+  float: left;
+  width: 1.1rem;
+  height: 1rem;
+  background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
+  background: url(/images/like.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
+  display: block;
+  float: left;
+  margin-left: 0.21rem;
+  font-size: 0.9rem;
+  font-family: "Helvetica-Light", "sans-serif";
+  color: #000;
+  opacity: 0.3;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment {
+  float: left;
+  margin-left: 0.93rem;
+  cursor: pointer;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
+  display: block;
+  float: left;
+  width: 0.97rem;
+  height: 1rem;
+  background: url(/images/icon-comment.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
+  display: block;
+  float: left;
+  margin-left: 0.21rem;
+  margin-right: 0.25rem;
+  font-size: 0.9rem;
+  font-family: "Helvetica-Light", "sans-serif";
+  color: #000;
+  opacity: 0.3;
+}
+
 .recommend-detail-works {
   margin-top: -0.4rem;
   line-height: 3.21rem;
@@ -1385,7 +1622,7 @@ html {
   display: block;
   width: 94%;
   padding: 1rem 3% 0.61rem;
-  border-bottom: 1px solid #DDDDDD;
+  /*border-bottom: 1px solid #DDDDDD;*/
   background-color: #fff;
 }
 .post-workShow .sectionHeader .avatar {
@@ -2005,242 +2242,6 @@ html {
   height: 2.57rem;
   background: url("http://7u2spr.com2.z0.glb.qiniucdn.com/movie/share.png") center no-repeat;
   background-size: contain;
-}
-
-.swiper-wrapper {
-  width: 100%;
-  height: 12.39rem;
-}
-.swiper-wrapper .swiper-slide img {
-  display: block;
-  width: 100%;
-}
-#_banner {
-  overflow: hidden;
-  height: 12.39rem;
-  margin-bottom: 1.2rem;
-}
-
-.swiper-hide {
-  overflow: hidden;
-}
-.hot-channel .channel {
-  /*overflow: hidden;*/
-  height: 3.7rem;
-  background-color: #fff;
-  margin-bottom: 1rem;
-}
-.hot-channel .channel a {
-  float: left;
-  width: 25%;
-}
-.hot-channel .channel a dt {
-  width: 3.7rem;
-  height: 3.7rem;
-  margin: 0 auto 0.36rem;
-}
-.hot-channel .channel a dt img {
-  display: block;
-  width: 100%;
-}
-.hot-channel .channel a dd {
-  text-align: center;
-  font-size: 0.86rem;
-  color: #313040;
-}
-.hot-channel .channel-more {
-  display: block;
-  width: 23%;
-  height: 1.79rem;
-  margin: 0 auto 1rem;
-  border: 1px solid #979797;
-  color: #979797;
-  line-height: 1.79rem;
-  text-align: center;
-  border-radius: 3.57rem;
-}
-.hot-channel .hot-works {
-  line-height: 3.21rem;
-  text-align: center;
-  font-size: 1rem;
-  color: #313040;
-  background-color: #f7f7f7;
-}
-.hot-channel .hot-works .works-icon {
-  display: inline-block;
-  height: 3.21rem;
-  width: 1.11rem;
-  margin-right: 0.5rem;
-  background: url(/images/hot-work.png) 0 center no-repeat;
-  background-size: contain;
-  vertical-align: top;
-}
-.hot-channel .hot-works span {
-  display: inline-block;
-  vertical-align: top;
-}
-
-.workSectionHeader {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0.54rem 0 0.54rem 0.36rem;
-  background-color: #fff;
-}
-.workSectionHeader .portrait {
-  float: left;
-  width: 1.43rem;
-  height: 1.43rem;
-  margin-right: 0.29rem;
-  border-radius: 100%;
-  overflow: hidden;
-}
-.workSectionHeader .portrait img {
-  display: block;
-  width: 100%;
-}
-.workSectionHeader .nickname {
-  float: left;
-  line-height: 1.43rem;
-  font-size: 0.9rem;
-  color: #000;
-}
-.hot-pageSection {
-  width: 100%;
-  background-color: #f7f7f7;
-}
-.hot-pageSection .workSection {
-  float: left;
-  width: 100%;
-  border-radius: 0.29rem;
-  box-shadow: 3px 3px 5px 2px #dedede;
-  overflow: hidden;
-  background-color: #fff;
-}
-.hot-pageSection .workSection .workPic {
-  overflow: hidden;
-  position: relative;
-  display: block;
-  width: 100%;
-  /*margin-bottom: 0.54rem;*/
-  max-height: 30rem;
-  font-size: 0;
-}
-.hot-pageSection .workSection .workPic img {
-  width: 100%;
-}
-.hot-pageSection .workSection .workPic .origin {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 4rem;
-  height: 4rem;
-  /*border: 0.21rem solid rgba(0,0,0,0.05);*/
-  border-bottom: 0;
-  border-radius: 0.21rem 0 0 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-.hot-pageSection .workSection .workPic .origin .tag {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  padding: 0.2rem;
-  /*width: 1.57rem;*/
-  height: 0.71rem;
-  line-height: 0.71rem;
-  font-size: 0.5rem;
-  text-align: center;
-  border-radius: 0.21rem 0 0 0;
-  background-color: #f9d161;
-  z-index: 1;
-  border-radius: 0.2rem;
-}
-.hot-pageSection .workSection .workPic .origin .pic {
-  width: 100%;
-  height: 4rem;
-  overflow: hidden;
-}
-.hot-pageSection .workSection .workPic .origin .pic img {
-  display: block;
-  width: 100%;
-}
-.hot-pageSection .workSection .workPic .origin .div-line {
-  position: absolute;
-  left: -0.21rem;
-  bottom: -0.18rem;
-  width: 4.42rem;
-  height: 0.18rem;
-  background-color: #fded5e;
-  z-index: 1;
-}
-.hot-pageSection .workSection .workDesc {
-  display: block;
-  overflow: hidden;
-  max-height: 3.13rem;
-  padding-left: 0.68rem;
-  line-height: 1.3rem;
-  font-size: 0.9rem;
-  color: #000;
-  background-color: #fff;
-}
-.hot-pageSection .workSection .workSectionFooter {
-  display: block;
-  background-color: #fff;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper {
-  float: right;
-  padding: 0.5rem 0;
-  line-height: 1rem;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .like {
-  float: left;
-  margin-left: 0.93rem;
-  cursor: pointer;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
-  display: block;
-  float: left;
-  width: 1.1rem;
-  height: 1rem;
-  background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
-  background: url(/images/like.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
-  display: block;
-  float: left;
-  margin-left: 0.21rem;
-  font-size: 0.9rem;
-  font-family: "Helvetica-Light", "sans-serif";
-  color: #000;
-  opacity: 0.3;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment {
-  float: left;
-  margin-left: 0.93rem;
-  cursor: pointer;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
-  display: block;
-  float: left;
-  width: 0.97rem;
-  height: 1rem;
-  background: url(/images/icon-comment.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.hot-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
-  display: block;
-  float: left;
-  margin-left: 0.21rem;
-  margin-right: 0.25rem;
-  font-size: 0.9rem;
-  font-family: "Helvetica-Light", "sans-serif";
-  color: #000;
-  opacity: 0.3;
 }
 
 .picBox {
