--- a/public/services/src/app/views/detail/detailWorks/detailWorks.html
+++ b/public/services/src/app/views/detail/detailWorks/detailWorks.html
@@ -1,9 +1,9 @@
 <% var i=0; _.each(ask.categories, function(categorie,i) { i++ %>
 	<% if(i == 1 ) { %>
-<!-- <a href="#channel/detail/<%= categorie.id %>" class="channel-go clearfix">
+<a href="#channel/detail/<%= categorie.id %>" class="channel-go clearfix">
 	<div class="vertical"></div>
 	<h2><%= categorie.display_name %></h2>
-</a> -->
+</a>
 <% } %>
 <% }) %>
 <div class="post-workShow">
