--- a/public/web/src/app/views/activity/header/header.less
+++ b/public/web/src/app/views/activity/header/header.less
@@ -28,7 +28,7 @@
 			    text-align: center;
 		        background: #fff;
 		        .activity-icon {
-		        	background: url('/img/activity.png') no-repeat;
+		        	background: url('/web/img/activity.png') no-repeat;
 				    display: inline-block;
 				    width: 60px;
 				    height: 30px;
@@ -57,15 +57,15 @@
 				    vertical-align: middle;
 				}
 				.person-icon {
-				    background: url('/img/login.png') no-repeat;
+				    background: url('/web/img/login.png') no-repeat;
 
 				}
 				.browse-icon {
-				    background: url('/img/browse.png') no-repeat;
+				    background: url('/web/img/browse.png') no-repeat;
 
 				}
 				.work-icon {
-				    background: url('/img/photo.png') no-repeat;
+				    background: url('/web/img/photo.png') no-repeat;
 
 				}
 				b {
