--- a/public/web/src/app/views/channel/ask/ask.html
+++ b/public/web/src/app/views/channel/ask/ask.html
@@ -19,7 +19,7 @@
 				<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
 			</div>
 			<div class="ask-btn">
-				<img src="/img/bangp_gray.png" alt="">
+				<img src="/web/img/bangp_gray.png" alt="">
 			</div>
 		</div>
 	</div>
