--- a/public/web/src/app/views/channel/nav/nav.less
+++ b/public/web/src/app/views/channel/nav/nav.less
@@ -26,7 +26,7 @@
 				width: 100%;
 			}
 			.triangle-icon {
-			    background: url('/img/sanjiao.png') no-repeat;
+			    background: url('/web/img/sanjiao.png') no-repeat;
 			    display: inline-block;
 			    width: 15px;
 			    height: 24px;
