--- a/public/web/src/app/views/channel/work/work.html
+++ b/public/web/src/app/views/channel/work/work.html
@@ -58,7 +58,7 @@
 		</div>
 		<div class="card-footer">
 			<div class="p-button">
-				<img src="/img/bangp.png" alt="">
+				<img src="/web/img/bangp.png" alt="">
 			</div>
 			<div class="progress-count">
 				<div class="progress-remind">
