--- a/public/web/src/app/views/channel/work/work.less
+++ b/public/web/src/app/views/channel/work/work.less
@@ -127,7 +127,7 @@
 				    .comment {
 				    	float: left;
 				    	.comment-icon {
-				        	background: url('/img/comment.png') no-repeat;
+				        	background: url('/web/img/comment.png') no-repeat;
 						    display: inline-block;
 						    width: 30px;
 						    height: 25px;
@@ -139,7 +139,7 @@
 				    .like {
 				    	float: left;
 				    	.like-icon {
-				        	background: url('/img/like_gray.png') no-repeat;
+				        	background: url('/web/img/like_gray.png') no-repeat;
 						    display: inline-block;
 						    width: 30px;
 						    height: 25px;
@@ -177,7 +177,7 @@
 					float: left;
 			    }
 				.progress-icon {
-		        	background: url('/img/share.png') no-repeat;
+		        	background: url('/web/img/share.png') no-repeat;
 				    display: inline-block;
 				    width: 30px;
 				    height: 30px;
