--- a/public/web/src/app/views/common/footer/footer.html
+++ b/public/web/src/app/views/common/footer/footer.html
@@ -1,3 +1,36 @@
-<div>
-	footer
+<div class="common-footer">
+	<div class="footer flex-box">
+		<div class="flex-1 tupppai-message">
+			<div class="tupppai-top flex-box">
+				<div class="tupppai-fingerpost flex-1">
+					图派指南
+				</div>
+				<div class="contact-we flex-1">
+					联系我们
+				</div>
+			</div>
+			<div class="tupppai-footer flex-box">
+				<div class="download-app flex-1">
+					下载应用
+				</div>
+				<div class="propose-feedback flex-1">
+					建议反馈
+				</div>
+			</div>
+		</div>
+		<div class="app-section flex-1">
+			<div class="wb">
+				<i class="wb-icon"></i>
+				微博
+			</div>
+			<div class="wx-user">
+				<i class="wx-icon"></i>
+				公众号
+			</div>
+			<div class="qq">
+				<i class="qq-icon"></i>
+				QQ
+			</div>
+		</div>
+	</div>
 </div>
