--- a/public/web/src/app/views/common/header/header.html
+++ b/public/web/src/app/views/common/header/header.html
@@ -1,18 +1,22 @@
 <div class="common-header">
 	<div class="header-section">
 		<div class="logo">
-			<img src="/img/logo.png" alt="">
+			<img src="/web/img/logo.png" alt="">
 		</div>
 		<ul class="header-nav">
 			<li class="home-press">
-				<i class="home-icon home-press-icon"></i>
-				首页
+				<a href="#/index/index">
+					<i class="home-icon home-press-icon"></i>
+					首页
+				</a>
 			</li>
 			<li>
 				频道
 			</li>
 			<li class="home-press">
-				作品
+				<a href="#/reply/reply">
+					作品
+				</a>
 			</li>
 		</ul>
 		<div class="register">
@@ -34,7 +38,7 @@
 				</div>
 			</div> -->
 			<div class="ask-button">
-				<img src="/img/askp.png" alt="">
+				<img src="/web/img/askp.png" alt="">
 			</div>
 			<!-- 登录弹窗 -->
 			<div class="hide none">
@@ -42,7 +46,7 @@
 					<div class="login-popup">
 						<div class="left-login">
 							<div class="logo">
-								<img src="/img/login_logo.png" alt="">
+								<img src="/web/img/login_logo.png" alt="">
 							</div>
 							<div class="other-login">
 								<span class="social-login">社交账号登录</span>
@@ -70,7 +74,7 @@
 								</div>
 							</div>
 							<div class="login-button">
-								<img src="/img/signin.png" alt="">
+								<img src="/web/img/signin.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -79,7 +83,7 @@
 					<div class="resgister-popup">
 						<div class="left-login">
 							<div class="logo">
-								<img src="/img/login_logo.png" alt="">
+								<img src="/web/img/login_logo.png" alt="">
 							</div>
 							<div class="other-login">
 								<span class="social-login">社交账号登录</span>
@@ -97,18 +101,43 @@
 							</div>
 							<div class="login-input">
 								<div class="phone-number">
-									<input type="text">
+									<input type="text" placeholder="昵称">
 								</div>
 								<div class="password">
-									<input type="text">
+									<input type="text" placeholder="手机号码">
 								</div>
-								<div class="forget-password">
-									忘记密码?
+								<div class="password">
+									<input type="text" placeholder="验证码">
+								</div>
+								<div class="password">
+									<input type="text" placeholder="输入密码">
 								</div>
 							</div>
 							<div class="login-button">
-								<img src="/img/signin.png" alt="">
+								<img src="/web/img/signup.png" alt="">
 							</div>
+						</div>
+					</div>
+				</a>
+				<a href="#Binding-popup" id="Binding-popup">
+					<div class="Binding-popup">
+						<div class="Bingding-title">
+							绑定手机
+						</div>
+						<div class="phone">
+							<input type="text"  placeholder="手机号码">
+						</div>
+						<div class="code">
+							<input type="text"  placeholder="验证码">
+							<div class="send-code">
+								获取验证码
+							</div>
+						</div>
+						<div class="import-password">
+							<input type="text"  placeholder="输入密码">
+						</div>
+						<div class="Bingding-btn">
+							<img src="/web/img/Bingding.png" alt="">
 						</div>
 					</div>
 				</a>
