--- a/public/web/src/app/views/common/header/header.less
+++ b/public/web/src/app/views/common/header/header.less
@@ -23,7 +23,7 @@
 			    color: #f9d160;
 		        border-bottom: 3px solid #f9d160;
 				.home-press-icon {
-					background: url('/img/home.png') no-repeat !important;
+					background: url('/web/img/home.png') no-repeat !important;
 				    display: inline-block;
 				    width: 22px;
 				    height: 23px;
@@ -31,7 +31,7 @@
 				}
 	    	}
 			.home-icon {
-			    background: url('/img/home_gray.png') no-repeat;
+			    background: url('/web/img/home_gray.png') no-repeat;
 			    display: inline-block;
 			    width: 22px;
 			    height: 23px;
@@ -74,7 +74,7 @@
     				float: left;
 				    margin-top: 20px;
     	    		.information-icon {
-						background: url('/img/alarm.png') no-repeat;
+						background: url('/web/img/alarm.png') no-repeat;
 					    display: inline-block;
 					    width: 22px;
 					    height: 23px;
@@ -91,7 +91,7 @@
 	    		line-height: 60px;
 			}
 			.register-icon {
-				background: url('/img/log_in.png') no-repeat;
+				background: url('/web/img/log_in.png') no-repeat;
 			    display: inline-block;
 			    width: 22px;
 			    height: 23px;
