--- a/public/web/src/app/views/detail/work/work.less
+++ b/public/web/src/app/views/detail/work/work.less
@@ -14,7 +14,7 @@
 			    width: 30px;
 			    height: 40px;
 			    vertical-align: middle;
-			    background: url('/img/p.png') no-repeat;
+			    background: url('/web/img/p.png') no-repeat;
 				background-position: 5px 7px;
 				margin-right: 5px;
 			}
@@ -86,7 +86,7 @@
 				    height: 40px;
 				    line-height: 32px;
 				    .channel-icon {
-			    	    background: url('/img/tag.png') no-repeat;
+			    	    background: url('/web/img/tag.png') no-repeat;
 					    display: inline-block;
 					    width: 22px;
 					    height: 18px;
@@ -122,7 +122,7 @@
 						    width: 22px;
 						    height: 40px;
 						    vertical-align: middle;
-						    background: url('/img/share.png') no-repeat;
+						    background: url('/web/img/share.png') no-repeat;
 						    background-position: 3px 11px;
 						    margin-right: 5px;
 			    		}
@@ -139,7 +139,7 @@
 						    width: 22px;
 						    height: 40px;
 						    vertical-align: middle;
-						    background: url('/img/like.png') no-repeat;
+						    background: url('/web/img/like.png') no-repeat;
 						    background-position: 3px 13px;
 						    margin-right: 5px;
 			    		}
@@ -156,7 +156,7 @@
 						    width: 22px;
 						    height: 40px;
 						    vertical-align: middle;
-						    background: url('/img/comment.png') no-repeat;
+						    background: url('/web/img/comment.png') no-repeat;
 						    background-position: 3px 13px;
 						    margin-right: 5px;
 			    		}
