--- a/public/web/src/app/views/user/header/header.less
+++ b/public/web/src/app/views/user/header/header.less
@@ -21,7 +21,7 @@
 	    		.name {
     			    font-size: 20px;
 	    			.sex-icon {
-						background: url('/img/male.png') no-repeat;
+						background: url('/web/img/male.png') no-repeat;
 					    display: inline-block;
 					    width: 22px;
 					    height: 23px;
@@ -41,7 +41,7 @@
 				    margin-top: 5px;
 				    color: #bab9bf;
 					.like-icon {
-						background: url('/img/like_gray.png') no-repeat;
+						background: url('/web/img/like_gray.png') no-repeat;
 					    display: inline-block;
 					    width: 22px;
 					    height: 23px;
@@ -83,7 +83,7 @@
 			    float: right;
 			    margin-top: 40px;
 	    		.setting-icon {
-				    background: url('/img/set.png') no-repeat;
+				    background: url('/web/img/set.png') no-repeat;
 				    display: inline-block;
 				    width: 30px;
 				    height: 23px;
