--- a/public/web/src/app/views/activity/work/work.less
+++ b/public/web/src/app/views/activity/work/work.less
@@ -61,7 +61,7 @@
 					float: left;
 				    margin: 0 20px 0 10px;
 					.comment-icon {
-						background: url('/img/comment.png') no-repeat;
+						background: url('/web/img/comment.png') no-repeat;
 					    background-position: 3px 4px;
 					}
 					.comment-count {
@@ -73,7 +73,7 @@
 				.like-show {
 					float: left;
 					.like-icon {
-						background: url('/img/like_gray.png') no-repeat;
+						background: url('/web/img/like_gray.png') no-repeat;
 					    background-position: 3px 4px;
 					}
 					.like-count {
@@ -89,7 +89,7 @@
 			    height: 40px;
 			    line-height: 32px;
 				.channer-icon {
-					background: url('/img/like_gray.png') no-repeat;
+					background: url('/web/img/like_gray.png') no-repeat;
 				    display: inline-block;
 				    width: 22px;
 				    height: 18px;
