--- a/public/web/src/app/views/detail/ask/ask.html
+++ b/public/web/src/app/views/detail/ask/ask.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="footer">
 					<div class="ask-btn">
-						<img src="/img/bangp_gray.png" alt="">
+						<img src="/web/img/bangp_gray.png" alt="">
 					</div>
 					<div class="comment">
 						<i class="comment-icon"></i>
