--- a/public/web/src/app/views/detail/ask/ask.less
+++ b/public/web/src/app/views/detail/ask/ask.less
@@ -14,7 +14,7 @@
 			    width: 30px;
 			    height: 40px;
 			    vertical-align: middle;
-			    background: url('/img/kuso.png') no-repeat;
+			    background: url('/web/img/kuso.png') no-repeat;
 				background-position: 5px 5px;
 				margin-right: 5px;
 			}
@@ -104,7 +104,7 @@
 						    width: 22px;
 						    height: 40px;
 						    vertical-align: middle;
-						    background: url('/img/comment.png') no-repeat;
+						    background: url('/web/img/comment.png') no-repeat;
 						    background-position: 3px 13px;
 						    margin-right: 5px;
 			    		}
