--- a/public/web/src/app/views/index/banner/banner.html
+++ b/public/web/src/app/views/index/banner/banner.html
@@ -1,25 +1,17 @@
 <div class="index-banner clearfix">
 	<div class="banner clearfix">
-		<a href="/#activity/activity"><img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt=""></a>
+		<%  _.each(banners,function(banner){ %>
+			<a href="<%= banner.pc_url %>"><img src="<%= banner.large_pic %>" alt=""></a>
+		<% }) %>
 	</div>
 	<div class="tag clearfix">
 		<ul>
-			<li>
-				<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				<span>按开始减肥了卡死了</span>
-			</li>
-			<li>
-				<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				<span>按开始减肥了卡死了</span>
-			</li>
-			<li>
-				<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				<span>按开始减肥了卡死了</span>
-			</li>
-			<li>
-				<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				<span>按开始减肥了卡死了</span>
-			</li>
+			<%  _.each(tags,function(tag){ %>
+				<li>
+					<img src="<%= tag.cover %>" alt="">
+					<span><%= tag.collection_name %></span>
+				</li>
+			<% }) %>
 		</ul>
 	</div>
 </div>
