--- a/public/web/src/app/views/index/banner/banner.less
+++ b/public/web/src/app/views/index/banner/banner.less
@@ -3,6 +3,8 @@
     margin: 20px auto 0;
     padding-bottom: 20px;
     border-bottom: 1px solid #e6e6e6;
+    position: relative;
+    z-index: 1;
 	.banner {
 		    float: left;
 		    width: 626px;
