--- a/public/web/src/less/common.less
+++ b/public/web/src/less/common.less
@@ -23,12 +23,51 @@ input,button,textarea,select{*font-size:100%; resize: none;}
 .hide {
     display: none !important
 }
+*::-webkit-input-placeholder {
+
+color: #b6b6b6 !important;
+
+}
+
+*:-moz-placeholder {
+
+color: #b6b6b6 !important;
+
+}
+
+*:-ms-input-placeholder {
+
+/* IE10+ */
+
+color: #b6b6b6 !important;
+
+}
 body, html {
     font-size: 1rem;
     min-width: 320px;
 	min-height: 100%;
 	color: #000;
 	font-family: 'PingFangSC-Regular','sans-serif';
+}
+
+*::-webkit-input-placeholder {
+
+color: red;
+
+}
+
+*:-moz-placeholder {
+
+color: red;
+
+}
+
+*:-ms-input-placeholder {
+
+/* IE10+ */
+
+color: red;
+
 }
 .none {
     display: none ;
@@ -75,8 +114,22 @@ input::-webkit-input-placeholder {
     -webkit-box-flex:1.0; /* Safari and Chrome */
     box-flex:1.0;
 }
+.flex-2 {
+
+    -moz-box-flex:2.0; /* Firefox */
+    -webkit-box-flex:2.0; /* Safari and Chrome */
+    box-flex:2.0;
+}
+.flex-6 {
+
+    -moz-box-flex:6.0; /* Firefox */
+    -webkit-box-flex:6.0; /* Safari and Chrome */
+    box-flex:6.0;
+}
 .login-popup {
     width: 650px;
+    position: relative;
+    z-index: 999;
     .left-login {
         width: 250px;
         display: inline-block;
@@ -159,7 +212,7 @@ input::-webkit-input-placeholder {
                 width: 30px;
                 height: 40px;
                 vertical-align: middle;
-                background: url('/img/qq_s.png') no-repeat;
+                background: url('/web/img/qq_s.png') no-repeat;
                 background-position: 5px 7px;
                 margin-right: 15px;
             }
@@ -169,7 +222,7 @@ input::-webkit-input-placeholder {
                 width: 30px;
                 height: 40px;
                 vertical-align: middle;
-                background: url('/img/sina_weibo_s.png') no-repeat;
+                background: url('/web/img/sina_weibo_s.png') no-repeat;
                 background-position: 5px 7px;
                 margin-right: 15px;
 
@@ -180,7 +233,7 @@ input::-webkit-input-placeholder {
                 width: 30px;
                 height: 40px;
                 vertical-align: middle;
-                background: url('/img/wechat_s.png') no-repeat;
+                background: url('/web/img/wechat_s.png') no-repeat;
                 background-position: 5px 7px;
                 margin-right: 15px;
 
@@ -188,7 +241,55 @@ input::-webkit-input-placeholder {
         }
     }
 }
+.Binding-popup {
+    padding: 40px;
+    background: #fff;
+    width: 320px;
+    border-radius: 10px;
+    .Bingding-title {
+        background: #fff;
+        text-align: center;
+        font-size: 20px;
+        color: #33313f;
+    }
+    input {
+        border-bottom: 1px solid #e8e8e8;
+        font-size: 16px;
+        padding: 5px;
+        width: 100%;
+        margin-top: 30px;
+    }
+    .phone {
 
+    }
+    .code {
+        position: relative;
+        .send-code {
+            background: #e8e8e8;
+            font-size: 14px;
+            width: 90px;
+            height: 30px;
+            position: absolute;
+            text-align: center;
+            line-height: 30px;
+            border-radius: 5px;
+            top: 15px;
+            right: 0px;
+        }
+    }
+    .import-password {
+
+    }
+    .Bingding-btn {
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
+        height: 35px;
+        img {
+
+        }
+    }
+}
 .resgister-popup {
     width: 650px;
     .left-login {
@@ -230,29 +331,27 @@ input::-webkit-input-placeholder {
             }
         }
         .login-input {
-            margin-top: 60px;
+            margin-top: 30px;
             .phone-number {
                 border-bottom: 1px solid #eaeaea;
                 input {
-
+                    display: inline-block;
+                    width: 100%;
+                    height: 30px;
+                    text-align: left;
+                    font-size: 16px;
                 }
             }
             .password {
                 border-bottom: 1px solid #eaeaea;
-                margin-top: 40px;
+                margin-top: 20px;
                 input {
-
+                        font-size: 16px;
                 }
-            }
-            .forget-password {
-                font-size: 14px;
-                color: #c7c7c7;
-                margin-top: 10px;
-                text-align: right;
             }
         }
         .login-button {
-            margin-top: 70px;
+            margin-top: 20px;
             img {
 
             }
@@ -273,7 +372,7 @@ input::-webkit-input-placeholder {
                 width: 30px;
                 height: 40px;
                 vertical-align: middle;
-                background: url('/img/qq_s.png') no-repeat;
+                background: url('/web/img/qq_s.png') no-repeat;
                 background-position: 5px 7px;
                 margin-right: 15px;
             }
@@ -283,7 +382,7 @@ input::-webkit-input-placeholder {
                 width: 30px;
                 height: 40px;
                 vertical-align: middle;
-                background: url('/img/sina_weibo_s.png') no-repeat;
+                background: url('/web/img/sina_weibo_s.png') no-repeat;
                 background-position: 5px 7px;
                 margin-right: 15px;
 
@@ -294,7 +393,7 @@ input::-webkit-input-placeholder {
                 width: 30px;
                 height: 40px;
                 vertical-align: middle;
-                background: url('/img/wechat_s.png') no-repeat;
+                background: url('/web/img/wechat_s.png') no-repeat;
                 background-position: 5px 7px;
                 margin-right: 15px;
 
